fixed charts on mobile view

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  z-index: 1;
   margin-top: 2vh;
   background: #16123F;
   display: flex;
